samples/_failures_safe/1761275003_b9c9f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d9f2694.c: In function ‘main’:
./samples/SAFE/__tmp_0d9f2694.c:152:17: error: expected expression at end of input
  152 |                 if (multiply_matrices(&mat1, &mat2,
      |                 ^~
./samples/SAFE/__tmp_0d9f2694.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d9f2694.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d9f2694.c:152:17: error: expected declaration or statement at end of input
